Fixed navigation display shift

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,4 +1,8 @@
 
+.logo {
+  position: absolute;
+}
+
 .login:hover {
   color: var(--figma-highlight-orange);
 }
